Fix social icon vertical alignment to horizontal

--- a/sass/_small-default.scss
+++ b/sass/_small-default.scss
@@ -5,8 +5,6 @@ body {
     line-height: 1.4;
 }
 
-
-
 header {
     background-color: #005b97;
 
@@ -68,41 +66,9 @@ header {
         .header-right {
           float: none;
         }
+    }
   }
-  
-  
-  }
-
-
-
-
-
-
-    // Original HEADER - Logo & Phone Number
-    // #Logo {
-    //     height: 101px;
-    //     max-width: 1200px;
-    //     margin: 0 auto;
-    //     img {
-            
-    //     }
-    // }
-    // .number {
-        
-    //     .telephone {
-    //         float:right;
-    //         color: #fff;
-    //         margin-top: 35px;
-    //         margin-right: 2%;
-    //         text-decoration: none;
-    //         font-size: 130%;
-    //         font-family: 'Crimson Text', serif;
-    //     }
-    // }
-
 }
-
-
 
 
 input {
@@ -114,7 +80,6 @@ input[type=search]:focus {
     width: 290px;
     background-color: #fff;
     border-color: #66CC75;
-
 }
 
 nav {
@@ -129,24 +94,22 @@ nav {
     margin: 0 auto;
     .customMenu {
         margin-left: 1%;
-
     }
 }
 
 // This is the UPDATED NEW CSS MENU 
 * {box-sizing: border-box;}
 
-
-
 .topnav {
-  overflow: hidden;
-  background-color: #e9e9e9;
+    background-color: #e9e9e9;
+    overflow: hidden;
+
 }
 
 .topnav a {
   float: left;
   display: block;
-  color: black;
+//   color: #fff;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -158,7 +121,8 @@ nav {
   color: black;
 }
 
-.topnav a.active {
+// .topnav a.active {
+.active {
   background-color: #2196F3;
   color: white;
 }
@@ -207,7 +171,7 @@ nav {
 // end of newly added
 
 .topnav .icon {
-    // display: none;
+    display: none;
 }
 
 .topnav .search-container {
@@ -291,6 +255,15 @@ nav {
 // END OF NEW ADDED DROPDOWN STYLES
 
 @media screen and (max-width: 600px) {
+// TEST TEST TEST
+.topnav a:not(:first-child) { display: none; }
+.topnav a.icon {
+    float: left;
+    display: block;
+}
+
+
+
   .topnav .search-container {
     float: none;
   }
@@ -319,6 +292,21 @@ nav {
     width: 100%;
     text-align: left;
   }
+}
+
+// TEST TEST TEST
+@media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+        position: relative;
+        right: 0;
+        top: 0;
+    }
+    .topnav.repsonsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
 
 
@@ -405,8 +393,10 @@ nav {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-  background-color: #717171;
+.active, 
+.dot:hover {
+  background-color: #2196F3;
+  color: #fff;
 }
 
 /* Fading animation */
@@ -683,6 +673,7 @@ footer {
     justify-content: center;
     padding: 25px;
     font-size: 120%;
+
     .icons {
         color: #fff;
         font-size: 200%;
@@ -694,6 +685,9 @@ footer {
     .pad:hover {
         color: #484848;
     }
+    .clearfix {
+        overflow: auto;
+      }
 }
 
 .copyright {
